2002-01-18  Richard Williamson  <rjw@apple.com>

    First pass at new view/datasource/controller API.
    
	* Misc.subproj/WKException.h:
	* Misc.subproj/WKException.m:
	* WebKit.pbproj/project.pbxproj:
	* WebView.subproj/WKDefaultWebController.h:
	* WebView.subproj/WKDefaultWebController.mm: (+[WKObjectHolder
	holderWithObject:]), (-[WKObjectHolder initWithObject:]), (-[WKObjectHolder
	dealloc]), (-[WKObjectHolder copyWithZone:]), (-[WKObjectHolder hash]),
	(-[WKObjectHolder object]), (-[WKObjectHolder isEqual:]),
	(-[WKDefaultWebController initWithView:dataSource:]), (-[WKDefaultWebController
	dealloc]), (-[WKDefaultWebController setDirectsAllLinksToSystemBrowser:]),
	(-[WKDefaultWebController directsAllLinksToSystemBrowser]),
	(-[WKDefaultWebController setView:andDataSource:]), (-[WKDefaultWebController
	viewForDataSource:]), (-[WKDefaultWebController dataSourceForView:]),
	(-[WKDefaultWebController mainView]), (-[WKDefaultWebController mainDataSource]),
	(-[WKDefaultWebController createViewForDataSource:inFrameNamed:]),
	(-[WKDefaultWebController createViewForDataSource:inIFrame:]),
	(-[WKDefaultWebController setStatusText:forDataSource:]),
	(-[WKDefaultWebController statusTextForDataSource:]), (-[WKDefaultWebController
	authenticate:]), (-[WKDefaultWebController
	receivedProgress:forResource:fromDataSource:]), (-[WKDefaultWebController
	receivedError:forResource:partialProgress:fromDataSource:]),
	(-[WKDefaultWebController locationWillChangeTo:]), (-[WKDefaultWebController
	locationChangeStartedForDataSource:]), (-[WKDefaultWebController
	locationChangeInProgressForDataSource:]), (-[WKDefaultWebController
	locationChangeDone:forDataSource:]), (-[WKDefaultWebController
	receivedPageTitle:forDataSource:]), (-[WKDefaultWebController
	serverRedirectTo:forDataSource:]):
	* WebView.subproj/WKDefaultWebControllerPrivate.h:
	* WebView.subproj/WKDefaultWebControllerPrivate.mm:
	(-[WKDefaultWebControllerPrivate init]), (-[WKDefaultWebControllerPrivate
	dealloc]):