@@ -1,3 +1,10 @@
+2002-01-21  John Sullivan  <sullivan@apple.com>
+
+	* WebView.subproj/WKWebController.h:
+	* WebView.subproj/WKWebView.h:
+	Changed WKConcreteWebController to WKDefaultWebController in a
+	couple of comments.
+
 2002-01-18  Richard Williamson  <rjw@apple.com>
 
     First pass at new view/datasource/controller API.
